--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,12 @@
 
 .movie {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   text-align: left;
+}
+
+.movie:not(:first-child) {
+  background: #f0e9d2;
 }
 
 .column {
